--- a/index.html
+++ b/index.html
@@ -2,9 +2,79 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="src/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="src/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="src/assets/favicon-16x16.png"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="src/assets/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="src/assets/android-chrome-512x512.png"
+    />
+    <link rel="icon" type="image/svg+xml" href="src/assets/favicon.ico" />
+
+    <meta
+      name="description"
+      content="tech-Refurb est une application react crée en 2 jours dans le cadre d'un hackathon. En partenariat avec Emmaüs, le but était de faciliter la vie des bénévoles, lors du rachat de matériel de seconde main. Le calcul du prix de rachat et de revente étant complexe, nous devions créer un algorithme facilitant ceci."
+    />
+    <meta name="author" content=" Waheb.C Wilhem.H Nicolas.R Delphine.T" />
+    <meta
+      property="og:title"
+      content="tech-Refurb, tech de seconde main accessible"
+    />
+    <meta property="og:url" content="https://delphine2669.github.io/" />
+    <meta
+      property="og:description"
+      content="tech-Refurb est une application react crée en 2 jours dans le cadre d'un hackathon. En partenariat avec Emmaüs, le but était de faciliter la vie des bénévoles, lors du rachat de matériel de seconde main. Le calcul du prix de rachat et de revente étant complexe, nous devions créer un algorithme facilitant ceci."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/Delphine2669/hackathon-emmaus/raw/main/src/assets/hackhatonScreen.png"
+    />
+
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="github.io" />
+    <meta property="twitter:url" content="https://delphine2669.github.io/" />
+    <meta
+      name="twitter:title"
+      content="tech-Refurb, tech de seconde main accessible"
+    />
+    <meta
+      name="twitter:description"
+      content="tech-Refurb est une application react crée en 2 jours dans le cadre d'un hackathon. En partenariat avec Emmaüs, le but était de faciliter la vie des bénévoles, lors du rachat de matériel de seconde main. Le calcul du prix de rachat et de revente étant complexe, nous devions créer un algorithme facilitant ceci."
+    />
+    <meta
+      name="twitter:image"
+      content="hhttps://github.com/Delphine2669/hackathon-emmaus/raw/main/src/assets/hackhatonScreen.png"
+    />
+    <title>tech-Refurb</title>
   </head>
   <body>
     <div id="root"></div>
